Fixes to POM.